--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lodash": "^4.17.5"
   },
   "devDependencies": {
+    "html-loader": "^0.5.5",
+    "ngtemplate-loader": "^2.0.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
   }
