--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "private": true,
   "scripts": {
-    "clean": "rimraf dist/*",
     "build:dev": "npm run client:build:dev && npm run server:build",
-    "client:build:dev": "NODE_ENV=development webpack",
-    "server:build": "babel server --out-dir dist/server",
+    "build:prod": "npm run client:build:prod && npm run server:build",
+    "client:build:dev": "npm run clean && npm run clean && NODE_ENV=development webpack",
+    "client:build:prod": "npm run clean && npm run clean && NODE_ENV=production webpack",
+    "server:build": "babel server --out-dir dist/server && npm run copy",
     "client:watch": "NODE_ENV=development webpack --watch",
     "server:watch": "babel server --watch --out-dir dist/server ",
     "watch": "npm run client:watch & npm run server:watch",
-    "start": "node dist/server"
+    "start": "node dist/server",
+    "serve": "npm run server:build && node dist/server & npm run watch",
+    "clean": "rimraf dist/*",
+    "copy": "cp .credentials dist -r"
   },
   "babel": {
     "presets": [
@@ -30,17 +34,50 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
-    "babel-runtime": "^6.26.0",
-    "express": "^4.16.3",
+    "babel-runtime": "^5.8.20",
+    "bluebird": "^3.4.1",
+    "body-parser": "^1.13.3",
+    "botbuilder": "^3.12.0",
+    "composable-middleware": "^0.3.0",
+    "compression": "^1.5.2",
+    "connect-livereload": "^0.5.3",
+    "connect-mongo": "^0.8.1",
+    "cookie-parser": "^1.3.5",
+    "copy-webpack-plugin": "^4.5.1",
+    "diff-array-objs": "~1.0.0",
+    "ejs": "^2.3.3",
+    "errorhandler": "^1.4.2",
+    "express": "^4.13.3",
+    "express-domain-middleware": "^0.1.0",
+    "express-jwt": "^3.0.0",
+    "express-session": "^1.11.3",
+    "fs-extra": "~0.26.3",
+    "googleapis": "~2.1.7",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mongoose": "^5.0.17",
+    "jsonwebtoken": "^5.0.0",
+    "lodash": "^3.10.1",
+    "lusca": "^1.3.0",
+    "metaphone": "^1.0.1",
+    "method-override": "^2.3.5",
+    "moment": "^2.14.1",
+    "mongoose": "^4.1.2",
+    "morgan": "~1.6.1",
+    "multiparty": "~4.1.2",
     "ngtemplate-loader": "^2.0.1",
+    "node-schedule": "^1.1.1",
+    "passport": "~0.3.0",
+    "passport-local": "^1.0.0",
     "rimraf": "^2.6.2",
+    "serve-favicon": "^2.3.0",
+    "shortid": "~2.2.4",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "socketio-jwt": "^4.2.0",
+    "translit": "~0.0.1",
+    "translit-russian": "~0.0.2",
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9"
+    "webpack-cli": "^2.0.9",
+    "webpack-livereload-plugin": "^2.1.1"
   }
 }
