--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.16",
     "angular": "^1.6.9",
+    "angular-moment": "^1.2.0",
     "lodash": "^4.17.5"
   },
   "devDependencies": {
@@ -63,7 +65,7 @@
     "lusca": "^1.3.0",
     "metaphone": "^1.0.1",
     "method-override": "^2.3.5",
-    "moment": "^2.14.1",
+    "moment": "^2.22.1",
     "mongoose": "^4.1.2",
     "morgan": "~1.6.1",
     "multiparty": "~4.1.2",
