--- a/package.json
+++ b/package.json
@@ -31,9 +31,28 @@
   "license": "ISC",
   "dependencies": {
     "@uirouter/angularjs": "^1.0.16",
-    "angular": "^1.6.9",
-    "angular-moment": "^1.2.0",
-    "lodash": "^4.17.5"
+    "angular": "^1.5.11",
+    "angular-bootstrap": "^0.12.2",
+    "angular-bootstrap-toggle": "^0.1.2",
+    "angular-chart.js": "^1.1.1",
+    "angular-cookies": "~1.5.11",
+    "angular-daterangepicker": "^0.2.3-alpha1",
+    "angular-moment": "~1.0.0",
+    "angular-resource": "~1.5.11",
+    "angular-sanitize": "~1.5.11",
+    "angular-socket-io": "~0.7.0",
+    "angular-spinner": "^1.0.1",
+    "angular-validation-match": "~1.5.2",
+    "bootstrap": "~3.3",
+    "es5-shim": "^4.5.10",
+    "font-awesome": "^4.1.0",
+    "json3": "^3.3.2",
+    "lodash": "~2.4.1",
+    "metaphone": "1.0.1",
+    "moment": "~2.14.1",
+    "ng-file-upload": "~11.0.0",
+    "translit": "*",
+    "ui-select": "^0.19.8"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -61,11 +80,8 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^5.0.0",
-    "lodash": "^3.10.1",
     "lusca": "^1.3.0",
-    "metaphone": "^1.0.1",
     "method-override": "^2.3.5",
-    "moment": "^2.22.1",
     "mongoose": "^4.1.2",
     "morgan": "~1.6.1",
     "multiparty": "~4.1.2",
@@ -79,7 +95,6 @@
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "socketio-jwt": "^4.2.0",
-    "translit": "~0.0.1",
     "translit-russian": "~0.0.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
