--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.16",
     "angular": "^1.5.11",
-    "angular-bootstrap": "^0.12.2",
     "angular-bootstrap-toggle": "^0.1.2",
     "angular-chart.js": "^1.1.1",
     "angular-cookies": "~1.5.11",
@@ -42,6 +41,7 @@
     "angular-sanitize": "~1.5.11",
     "angular-socket-io": "~0.7.0",
     "angular-spinner": "^1.0.1",
+    "angular-ui-bootstrap": "^2.5.6",
     "angular-validation-match": "~1.5.2",
     "bootstrap": "~3.3",
     "es5-shim": "^4.5.10",
