Migrate to webpack in progress

--- a/package.json
+++ b/package.json
@@ -44,15 +44,19 @@
     "angular-ui-bootstrap": "^2.5.6",
     "angular-validation-match": "~1.5.2",
     "bootstrap": "~3.3",
+    "css-loader": "^0.28.11",
     "es5-shim": "^4.5.10",
+    "file-loader": "^1.1.11",
     "font-awesome": "^4.1.0",
     "json3": "^3.3.2",
     "lodash": "~2.4.1",
     "metaphone": "1.0.1",
     "moment": "~2.14.1",
     "ng-file-upload": "~11.0.0",
+    "style-loader": "^0.21.0",
     "translit": "*",
-    "ui-select": "^0.19.8"
+    "ui-select": "^0.19.8",
+    "url-loader": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
