--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "angular-ui-bootstrap": "^2.5.6",
     "angular-validation-match": "~1.5.2",
     "bootstrap": "~3.3",
+    "bootstrap-daterangepicker": "^3.0.1",
     "css-loader": "^0.28.11",
     "es5-shim": "^4.5.10",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.1.0",
+    "jquery": "^3.3.1",
     "json3": "^3.3.2",
     "lodash": "~2.4.1",
     "metaphone": "1.0.1",
