--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "font-awesome": "^4.1.0",
     "jquery": "^3.3.1",
     "json3": "^3.3.2",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "lodash": "~2.4.1",
     "metaphone": "1.0.1",
     "moment": "~2.14.1",
