--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-angularjs-annotate": "^0.8.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^5.8.20",
     "body-parser": "^1.13.3",
