--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,6 +4,7 @@ services:
     build: .
     environment:
       - TZ=Europe/Kiev
+      - NODE_ENV=development
     command: npm run build:serve
     ports:
      - "9000:9000"
