--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "private": true,
   "scripts": {
     "build:serve": "npm run build:dev && npm run serve",
-    "build:dev": "npm run client:build:dev && npm run server:build",
-    "serve": "node dist/server & npm run watch",
+    "build:dev": "npm run client:build:dev",
+    "serve": "NODE_ENV=development nodemon dist/server & npm run watch",
     "client:build:dev": "npm run clean && NODE_ENV=development webpack && npm run copy:client",
     "build:start": "npm run build && npm run start",
     "build": "npm run client:build:prod && npm run server:build",
-    "start": "NODE_ENV=production GOOGLE_KEY_FILE=dist/.credentials/HRDB.json node dist/server",
+    "start": "NODE_ENV=production node dist/server",
     "client:build:prod": "npm run clean && NODE_ENV=production webpack && npm run copy:client",
-    "server:build": "babel server --out-dir dist/server && npm run copy:server",
+    "server:build": "NODE_ENV=production webpack --config webpack-server.config.js && npm run copy:server",
     "watch": "npm run client:watch & npm run server:watch",
     "client:watch": "NODE_ENV=development webpack --watch",
-    "server:watch": "babel server --watch --out-dir dist/server ",
+    "server:watch": "NODE_ENV=development webpack --watch --config webpack-server.config.js",
     "clean": "rimraf dist/*",
     "copy:server": "cp .credentials dist -r",
     "copy:client": "cp -t dist/client client/favicon.ico client/robots.txt"
@@ -30,82 +30,69 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.16",
-    "angular": "^1.5.11",
+    "@uirouter/angularjs": "^1.0.18",
+    "angular": "^1.7.2",
     "angular-chart.js": "^1.1.1",
-    "angular-cookies": "~1.5.11",
-    "angular-daterangepicker": "^0.2.3-alpha1",
-    "angular-moment": "~1.0.0",
-    "angular-resource": "~1.5.11",
-    "angular-sanitize": "~1.5.11",
-    "angular-socket-io": "~0.7.0",
+    "angular-cookies": "^1.7.2",
+    "angular-moment": "^1.2.0",
+    "angular-resource": "^1.7.2",
+    "angular-sanitize": "^1.7.2",
     "angular-spinner": "^1.0.1",
     "angular-ui-bootstrap": "^2.5.6",
-    "angular-validation-match": "~1.5.2",
+    "angular-validation-match": "^1.9.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "~3.3",
     "bootstrap-daterangepicker": "^3.0.1",
-    "css-loader": "^0.28.11",
-    "es5-shim": "^4.5.10",
-    "file-loader": "^1.1.11",
-    "font-awesome": "^4.1.0",
+    "botbuilder": "^3.15.0",
+    "composable-middleware": "^0.3.0",
+    "compression": "^1.7.2",
+    "connect-livereload": "^0.6.0",
+    "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
+    "errorhandler": "^1.5.0",
+    "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
+    "fs-extra": "^6.0.1",
+    "googleapis": "~2.1.7",
     "jquery": "^3.3.1",
-    "json3": "^3.3.2",
+    "jsonwebtoken": "^8.3.0",
     "less": "^3.0.4",
-    "less-loader": "^4.1.0",
-    "lodash": "~2.4.1",
-    "metaphone": "1.0.1",
-    "moment": "~2.14.1",
-    "ng-file-upload": "~11.0.0",
-    "style-loader": "^0.21.0",
-    "translit": "*",
-    "ui-select": "^0.19.8",
-    "url-loader": "^1.0.1"
+    "lusca": "^1.6.0",
+    "metaphone": "^1.0.3",
+    "method-override": "^2.3.10",
+    "moment": "^2.22.2",
+    "mongoose": "^4.1.2",
+    "morgan": "^1.9.0",
+    "multiparty": "^4.1.4",
+    "ng-file-upload": "^12.2.13",
+    "node-schedule": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "rimraf": "^2.6.2",
+    "serve-favicon": "^2.5.0",
+    "shortid": "^2.2.8",
+    "translit": "^0.1.0",
+    "ui-select": "^0.19.8"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
-    "babel-plugin-angularjs-annotate": "^0.8.2",
+    "babel-plugin-angularjs-annotate": "^0.9.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-runtime": "^5.8.20",
-    "body-parser": "^1.13.3",
-    "botbuilder": "^3.12.0",
-    "composable-middleware": "^0.3.0",
-    "compression": "^1.5.2",
-    "connect-livereload": "^0.5.3",
-    "connect-mongo": "^0.8.1",
-    "cookie-parser": "^1.3.5",
-    "copy-webpack-plugin": "^4.5.1",
-    "diff-array-objs": "~1.0.0",
-    "ejs": "^2.3.3",
-    "errorhandler": "^1.4.2",
-    "express": "^4.13.3",
-    "express-domain-middleware": "^0.1.0",
-    "express-jwt": "^3.0.0",
-    "express-session": "^1.11.3",
-    "fs-extra": "~0.26.3",
-    "googleapis": "~2.1.7",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jsonwebtoken": "^5.0.0",
-    "lusca": "^1.3.0",
-    "method-override": "^2.3.5",
-    "mongoose": "^4.1.2",
-    "morgan": "~1.6.1",
-    "multiparty": "~4.1.2",
+    "less-loader": "^4.1.0",
     "ngtemplate-loader": "^2.0.1",
-    "node-schedule": "^1.1.1",
-    "passport": "~0.3.0",
-    "passport-local": "^1.0.0",
-    "rimraf": "^2.6.2",
-    "serve-favicon": "^2.3.0",
-    "shortid": "~2.2.4",
-    "socket.io": "^1.3.5",
-    "socket.io-client": "^1.3.5",
-    "socketio-jwt": "^4.2.0",
-    "translit-russian": "~0.0.2",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.12.2",
+    "webpack-cli": "^3.0.8",
     "webpack-livereload-plugin": "^2.1.1"
   }
 }
